feat: remove username
