# src/modules/accounts/dtos/ICreateUserDTO.ts
@@ -1,6 +1,5 @@
 interface ICreateUserDTO {
     name: string;
-    username: string;
     password: string;
     email: string;
     drive_license: string;
