# src/modules/accounts/entities/User.ts
@@ -16,9 +16,6 @@ class User {
     name: string;
 
     @Column()
-    username: string;
-
-    @Column()
     password: string;
 
     @Column()
