# src/modules/accounts/useCases/Users/CreateUser/CreateUserController.ts
@@ -13,7 +13,6 @@ class CreateUserController {
         await createUserUseCase.execute({
             name,
             email,
-            username,
             drive_license,
             cpf,
             password,
