# src/swagger.json
@@ -232,9 +232,6 @@
                 "email": {
                     "type": "string"
                 },
-                "username": {
-                    "type": "string"
-                },
                 "drive_license": {
                     "type": "string"
                 },
@@ -248,7 +245,6 @@
             "example": {
                 "name": "User name sample",
                 "email": "User email sample",
-                "username": "User username sample",
                 "drive_license": "User drive_license sample",
                 "password": "User password sample",
                 "cpf": "User cpf sample"
